refactor: update Dockerfile for improved build process and change image name in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/blog-paczkow-me
+      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/blog
 
     steps:
       - name: Checkout code
