--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
     "@astrojs/react": "^4.3.0",
-    "@fontsource/inter": "^5.2.6",
+    "@fontsource-variable/inter": "^5.2.6",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/vite": "^4.1.11",
