--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dist/
 node_modules/
 
 # logs
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -22,3 +23,7 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# prompts containing sensitive AI instructions
+prompts/
+.docs/
