--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "transform:notes": "node --experimental-transform-types --env-file=.env scripts/zettelkasten/index.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
@@ -19,10 +20,15 @@
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.8",
     "astro-icon": "^1.1.5",
+    "chokidar": "^4.0.3",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
+    "gray-matter": "^4.0.3",
     "mdast-util-to-string": "^4.0.0",
     "nanostores": "^1.0.1",
+    "openai": "^5.22.0",
+    "pino": "^9.10.0",
+    "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "reading-time": "^1.5.0",
@@ -33,6 +39,7 @@
     "@astrojs/rss": "^4.0.12",
     "@biomejs/biome": "^1.9.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.5.2",
     "hastscript": "^9.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
@@ -40,6 +47,8 @@
     "rehype-slug": "^6.0.0",
     "satori": "^0.13.2",
     "satori-html": "^0.3.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
