Remove "notes" as content model and keep only with essays to simplify content management

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "transform:notes": "node --experimental-transform-types --env-file=.env scripts/zettelkasten/index.ts"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
